feat: :rocket: deploy working

--- a/eda/streamlit-posit-app/pyproject.toml
+++ b/eda/streamlit-posit-app/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "streamlit (>=1.44.1,<2.0.0)",
 ]
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
