--- a/app/streamlit-posit-app/pyproject.toml
+++ b/app/streamlit-posit-app/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "rsconnect-python (>=1.25.2,<2.0.0)",
     "streamlit (>=1.44.1,<2.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)",
 ]
 
 [tool.poetry.requires-plugins]
