--- a/app/streamlit-posit-app/pyproject.toml
+++ b/app/streamlit-posit-app/pyproject.toml
@@ -11,6 +11,11 @@ dependencies = [
     "rsconnect-python (>=1.25.2,<2.0.0)",
     "streamlit (>=1.44.1,<2.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "alembic (>=1.15.2,<2.0.0)",
+    "click (>=8.1.8,<9.0.0)",
+    "streamlit-aggrid (>=1.1.2,<2.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
 ]
 
 [tool.poetry.requires-plugins]
